force-app/main/default/objects/Offline_Payer__c/Offline_Payer__c.object-meta.xml
<CustomObject>
    <description>Contains record information for accounts that are considered offline payers.</description>
    <label>Offline Payer</label>
    <nameField>
        <displayFormat>OP-{000}</displayFormat>
        <label>Offline Payer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offline Payers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>