force-app/main/default/objects/Offline_Payer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated to offline payer record</description>
    <inlineHelpText>Account associated to offline payer record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offline Payers</relationshipLabel>
    <relationshipName>Offline_Payer</relationshipName>
    <type>Lookup</type>
</CustomField>