force-app/main/default/objects/Offline_Payer__c/fields/Accounting_Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Department_Email__c</fullName>
    <description>Customer&apos;s accounting department email</description>
    <inlineHelpText>Customer&apos;s accounting department email</inlineHelpText>
    <label>Accounting Department Email</label>
    <type>Email</type>
</CustomField>