force-app/main/default/objects/Offline_Payer__c/fields/ADMIN_TAG__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_TAG__c</fullName>
    <inlineHelpText>Admin use only</inlineHelpText>
    <label>ADMIN TAG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>