force-app/main/default/objects/Offline_Payer__c/fields/Annual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rate__c</fullName>
    <description>Annualized rate based on monthly amount</description>
    <formula>Monthly_Amount__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annualized rate based on monthly amount</inlineHelpText>
    <label>Annual Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>