force-app/main/default/objects/Offline_Payer__c/fields/BW_School_UUID__c.field-meta.xml
<CustomField>
    <fullName>BW_School_UUID__c</fullName>
    <description>Brightwheel School UUID as related to school object on account</description>
    <formula>Account__r.School_Object__r.Brightwheel_School_UUID__c</formula>
    <inlineHelpText>Brightwheel School UUID as related to school object on account</inlineHelpText>
    <label>BW School UUID</label>
    <type>Text</type>
</CustomField>