force-app/main/default/objects/Offline_Payer__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Capacity as indicated on account record</description>
    <formula>Account__r.Capacity__c</formula>
    <inlineHelpText>Capacity as indicated on account record</inlineHelpText>
    <label>Licensed Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>