force-app/main/default/objects/Offline_Payer__c/fields/CC_2_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_2_Email__c</fullName>
    <description>Email address to be cc&apos;d in communications</description>
    <inlineHelpText>Email address to be cc&apos;d in communications</inlineHelpText>
    <label>CC #2 Email</label>
    <type>Email</type>
</CustomField>