force-app/main/default/objects/Offline_Payer__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Open text field for comments regarding the offline payer record</description>
    <inlineHelpText>Open text field for comments regarding the offline payer record</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>