force-app/main/default/objects/Offline_Payer__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Date at which contract is set to expire</description>
    <inlineHelpText>Date at which contract is set to expire</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>