force-app/main/default/objects/Offline_Payer__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Start date of offline payer contract</description>
    <inlineHelpText>Start date of offline payer contract</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>