force-app/main/default/objects/Offline_Payer__c/fields/Coupon_Applied__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Applied__c</fullName>
    <description>Coupon applied during customer sign up</description>
    <inlineHelpText>Coupon applied during customer sign up</inlineHelpText>
    <label>Coupon Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>