force-app/main/default/objects/Offline_Payer__c/fields/Current_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Current_Enrollment__c</fullName>
    <description>Current enrollment as indicated on account record</description>
    <formula>Account__r.Current_Enrollment__c</formula>
    <inlineHelpText>Current enrollment as indicated on account record</inlineHelpText>
    <label>Current Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>