force-app/main/default/objects/Offline_Payer__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Customer Type of Related Account</description>
    <formula>TEXT(Account__r.Customer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Type of Related Account</inlineHelpText>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>