force-app/main/default/objects/Offline_Payer__c/fields/Date_Check_was_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Check_was_Received__c</fullName>
    <description>Date in which Brightwheel received customer check</description>
    <inlineHelpText>Date in which Brightwheel received customer check</inlineHelpText>
    <label>Date Check was Received</label>
    <type>Date</type>
</CustomField>