force-app/main/default/objects/Offline_Payer__c/fields/Date_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Sent__c</fullName>
    <description>Date in which invoice was sent to customer</description>
    <inlineHelpText>Date in which invoice was sent to customer</inlineHelpText>
    <label>Date Invoice Sent</label>
    <type>Date</type>
</CustomField>