force-app/main/default/objects/Offline_Payer__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>School&apos;s DBA for business use</description>
    <inlineHelpText>School&apos;s DBA for business use</inlineHelpText>
    <label>DBA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>