force-app/main/default/objects/Offline_Payer__c/fields/Initial_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Initial/New Offline Payer record associated to renewal</description>
    <inlineHelpText>Initial/New Offline Payer record associated to renewal</inlineHelpText>
    <label>Initial Enrollment</label>
    <referenceTo>Offline_Payer__c</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>