force-app/main/default/objects/Offline_Payer__c/fields/LOGIC_Check_Not_Received_60__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Check_Not_Received_60__c</fullName>
    <description>Status remains at Invoice Created and Sent after 60 days  (marks as true only on 60th day)</description>
    <formula>AND(
ISPICKVAL(Status__c, &quot;Invoice Created and Sent&quot;),
Date_Invoice_Sent__c = TODAY()-60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status remains at Invoice Created and Sent after 60 days  (marks as true only on 60th day)</inlineHelpText>
    <label>LOGIC Check Not Received 60</label>
    <type>Checkbox</type>
</CustomField>