force-app/main/default/objects/Offline_Payer__c/fields/LOGIC_Check_Not_Received_75__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Check_Not_Received_75__c</fullName>
    <description>Status remains at Invoice Created and Sent after 75 days  (marks as true only on 75th day)</description>
    <formula>AND(
ISPICKVAL(Status__c, &quot;Invoice Created and Sent&quot;),
Date_Invoice_Sent__c = TODAY()-75
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status remains at Invoice Created and Sent after 45 days  (marks as true only on 75th day)</inlineHelpText>
    <label>LOGIC Check Not Received 75</label>
    <type>Checkbox</type>
</CustomField>