force-app/main/default/objects/Offline_Payer__c/fields/LOGIC_Create_Cancel_Case__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Create_Cancel_Case__c</fullName>
    <description>Triggers creation of case if check was not received 80 days after invoice is sent</description>
    <formula>Date_Invoice_Sent__c = TODAY()-80</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Triggers creation of case if check was not received 80 days after invoice is sent</inlineHelpText>
    <label>LOGIC Create Cancel Case</label>
    <type>Checkbox</type>
</CustomField>