force-app/main/default/objects/Offline_Payer__c/fields/LOGIC_CW_Opp_89_Days__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_CW_Opp_89_Days__c</fullName>
    <description>Related CW Opportunity was 89 days ago</description>
    <formula>Related_CW_Opportunity__r.CloseDate = TODAY()-89</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related CW Opportunity was 89 days ago</inlineHelpText>
    <label>LOGIC CW Opp 89 Days</label>
    <type>Checkbox</type>
</CustomField>