force-app/main/default/objects/Offline_Payer__c/fields/LOGIC_New_Status_Not_Updated__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_New_Status_Not_Updated__c</fullName>
    <description>Status remains at new though Offline Payer record was created 14 days ago (will mark true on the 14th day only)</description>
    <formula>AND(
      ISPICKVAL(Status__c, &quot;New&quot;),
      DATEVALUE(CreatedDate)= TODAY()-14
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status remains at new though Offline Payer record was created 14 days ago (will mark true on the 14th day only)</inlineHelpText>
    <label>LOGIC New Status Not Updated</label>
    <type>Checkbox</type>
</CustomField>