force-app/main/default/objects/Offline_Payer__c/fields/LOGIC_Renewal_In_60_Days__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_Renewal_In_60_Days__c</fullName>
    <description>Triggers renewal case when renewal date is 60 days from today</description>
    <formula>AND( 
Customer_Type__c &lt;&gt; &apos;Enterprise&apos;,   
NOT(Related_CW_Opportunity__r.RecordTypeId = &apos;0123u000000FT4L&apos;), 
      Renewal_Date__c  = TODAY()+60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Triggers renewal case when renewal date is 60 days from today</inlineHelpText>
    <label>LOGIC Renewal In 60 Days</label>
    <type>Checkbox</type>
</CustomField>