force-app/main/default/objects/Offline_Payer__c/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <description>Monthly subscription amount for customer. If record was created from opportunity, opportunity amount will be recorded in this field.</description>
    <inlineHelpText>Monthly subscription amount for customer. If record was created from opportunity, opportunity amount will be recorded in this field.</inlineHelpText>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>