force-app/main/default/objects/Offline_Payer__c/fields/Most_Recent_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Latest renewal record associated with this record</description>
    <inlineHelpText>Latest renewal record associated with this record</inlineHelpText>
    <label>Most Recent Renewal</label>
    <referenceTo>Offline_Payer__c</referenceTo>
    <relationshipLabel>Initial Enrollment</relationshipLabel>
    <relationshipName>Initial_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>