force-app/main/default/objects/Offline_Payer__c/fields/No_of_Free_Months_in_Coupon__c.field-meta.xml
<CustomField>
    <fullName>No_of_Free_Months_in_Coupon__c</fullName>
    <description>Based on coupon, how many months does customer have for free? (free only, do not input discounted months)</description>
    <inlineHelpText>Based on coupon, how many months does customer have for free? (free only, do not input discounted months)</inlineHelpText>
    <label>No. of Free Months in Coupon</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>