force-app/main/default/objects/Offline_Payer__c/fields/Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites__c</fullName>
    <description>Number of sites related to account</description>
    <formula>Account__r.Number_of_Sites__c</formula>
    <inlineHelpText>Number of sites related to account</inlineHelpText>
    <label>Number of Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>