force-app/main/default/objects/Offline_Payer__c/fields/Purchasing_Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Department_Email__c</fullName>
    <description>Purchasing department&apos;s email</description>
    <inlineHelpText>Purchasing department&apos;s email</inlineHelpText>
    <label>Purchasing Department Email</label>
    <type>Email</type>
</CustomField>