force-app/main/default/objects/Offline_Payer__c/fields/Related_CW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_CW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SaaS Closed Won Opportunity that triggered offline payer case</description>
    <inlineHelpText>SaaS Closed Won Opportunity that triggered offline payer case</inlineHelpText>
    <label>Related CW Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Offline Payers</relationshipLabel>
    <relationshipName>Offline_Payer</relationshipName>
    <type>Lookup</type>
</CustomField>