force-app/main/default/objects/Offline_Payer__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Date which contract is to be renewed</description>
    <inlineHelpText>Date which contract is to be renewed</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>