force-app/main/default/objects/Offline_Payer__c/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <description>Email of requestor</description>
    <formula>Requestor_Name__r.Email</formula>
    <inlineHelpText>Email of requestor</inlineHelpText>
    <label>Requestor Email</label>
    <type>Text</type>
</CustomField>