force-app/main/default/objects/Offline_Payer__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact whom originated offline payer request</description>
    <inlineHelpText>Contact whom originated offline payer request</inlineHelpText>
    <label>Requestor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offline Payers</relationshipLabel>
    <relationshipName>Offline_Payer</relationshipName>
    <type>Lookup</type>
</CustomField>