force-app/main/default/objects/Offline_Payer__c/fields/Saved_Clawback__c.field-meta.xml
<CustomField>
    <fullName>Saved_Clawback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If retention team was able to save the case prior to day 89, no clawback slack for the rep</description>
    <inlineHelpText>If retention team was able to save the case prior to day 89, no clawback slack for the rep</inlineHelpText>
    <label>Saved Clawback</label>
    <type>Checkbox</type>
</CustomField>