force-app/main/default/objects/Offline_Payer__c/fields/School_State__c.field-meta.xml
<CustomField>
    <fullName>School_State__c</fullName>
    <description>State in which school is located</description>
    <formula>Account__r.School_Object__r.State__c</formula>
    <inlineHelpText>State in which school is located</inlineHelpText>
    <label>School State</label>
    <type>Text</type>
</CustomField>