force-app/main/default/objects/Offline_Payer__c/fields/State_or_Government_Subsidized_Sponsored__c.field-meta.xml
<CustomField>
    <fullName>State_or_Government_Subsidized_Sponsored__c</fullName>
    <description>Is school current subsidized or sponsored by the government/state</description>
    <inlineHelpText>Is school current subsidized or sponsored by the government/state</inlineHelpText>
    <label>State or Government Subsidized/Sponsored</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I&apos;m unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>