force-app/main/default/objects/Offline_Payer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of offline payer sign up</description>
    <inlineHelpText>Current status of offline payer sign up</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Invoice Created and Sent</fullName>
            </value>
            <value>
                <fullName>Check Received</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Customer Moved Online</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>