force-app/main/default/objects/Offline_Payer__c/fields/Trigger_a_Two_Week_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Trigger_a_Two_Week_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark as true if a reminder task should be created to follow up with customer</description>
    <inlineHelpText>Mark as true if a reminder task should be created to follow up with customer</inlineHelpText>
    <label>Trigger a Two Week Follow Up</label>
    <type>Checkbox</type>
</CustomField>