force-app/main/default/objects/Offline_Payer__c/recordTypes/New.recordType-meta.xml
<RecordType>
    <fullName>New</fullName>
    <active>true</active>
    <description>Account&apos;s enrollment as an offline payer</description>
    <label>New</label>
</RecordType>