force-app/main/default/objects/Offline_Payer__c/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <description>Account is renewing existing offline payer contract</description>
    <label>Renewal</label>
</RecordType>